--- a/css/styles.css
+++ b/css/styles.css
@@ -31,9 +31,23 @@ ul {
     display: block;
     padding: 24px 0;
 }
+.head-link::after {
+    content: "";
+    width: 100%;
+    display: block;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+}
 .first-part {
     background-color: #2e2f42;
     padding: 188px 0;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)), url(/images/office.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    max-width: 1440px;
 
 }
 .first-part .inscription {
@@ -62,9 +76,26 @@ ul {
     display: block;
     margin: 0 auto;
 }
+.strategy-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #8e8f99;
+        border-radius: 4px;
+        width: 264px;
+        height: 112px;
+        background: #f4f4fd;
+        margin-bottom: 8px;
+}
+.people-icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .third-part {
     background-color: #f4f4fd;
     padding: 120px 0;
+    background: #f4f4fd;
 }
 .ppl-dscr {
     font-size: 16px;
