--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,11 @@ ul {
     display: block;
     padding: 24px 0;
 }
+.head-link {
+    position: absolute;
+    color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .head-link::after {
     content: "";
     width: 100%;
@@ -38,6 +43,12 @@ ul {
     height: 4px;
     background-color: #404bbf;
     border-radius: 2px;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+}
+.address-link {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .first-part {
     background-color: #2e2f42;
@@ -46,9 +57,9 @@ ul {
         rgba(46, 47, 66, 0.7)), url(/images/office.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-
     max-width: 1440px;
-
+    background-position: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .first-part .inscription {
     font-weight: 700;
@@ -89,13 +100,18 @@ ul {
 }
 .people-icons {
     display: flex;
-    align-items: center;
     justify-content: center;
+    gap: 24px;
+}
+.people-icons-list {
+    width: 40px;
+    height: 40px;
 }
 .third-part {
     background-color: #f4f4fd;
     padding: 120px 0;
     background: #f4f4fd;
+
 }
 .ppl-dscr {
     font-size: 16px;
@@ -107,6 +123,9 @@ ul {
     background-color: #ffffff;
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+            0px 1px 1px rgba(46, 47, 66, 0.16),
+            0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .list .benef-s {
     font-size: 16px;
@@ -256,6 +275,7 @@ a {
     border-bottom: 1px solid #e7e9fc;
     margin: 0 auto;
     padding: 0 15px;
+    box-shadow: 0px 2px 1px rgba;
 }
 .header-container {
     display: flex;
