--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ ul {
     left: 0;
     bottom: -1px;
 }
-.address-link {
+.address-link-list {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .first-part {
@@ -86,6 +86,7 @@ ul {
     border-radius: 4px;
     display: block;
     margin: 0 auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .strategy-box {
     display: flex;
@@ -275,7 +276,9 @@ a {
     border-bottom: 1px solid #e7e9fc;
     margin: 0 auto;
     padding: 0 15px;
-    box-shadow: 0px 2px 1px rgba;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-container {
     display: flex;
