--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,23 @@ ul {
     color: #2e2f42;
     text-align: center;
     margin-bottom: 8px;
-
+}
+.icon-link {
+width: 100%;
+height: 100%;
+background-color: #4d5ae5;
+border-radius: 50%;
+display: flex;align-items: center;
+justify-content: center;
+}
+.employee-icon {
+    fill: #f4f4fd;
+}
+.icon-link:hover {
+    background-color: #404bbf;
+}
+.icon-link:focus {
+    background-color: #404bbf;
 }
 .logo {
     font-family: "Raleway", sans-serif;
