--- a/css/styles.css
+++ b/css/styles.css
@@ -272,6 +272,12 @@ a {
 .part-of-list {
     background-color: #ffffff;
     width: calc((100% - 48px)) / 3;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+part-of-list:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .list .dscr {
     line-height: 1.5;
@@ -339,6 +345,10 @@ img {
 .four-part-of {
     padding-top: 120px;
     padding-bottom: 120px;
+}
+.four-section-image {
+    position: relative;
+    overflow: hidden;
 }
 .list-four {
     display: flex;
