--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,7 @@ ul {
 .people-icons-list {
     width: 40px;
     height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .third-part {
     background-color: #f4f4fd;
@@ -275,9 +276,7 @@ a {
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 part-of-list:hover {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
+   
 }
 .list .dscr {
     line-height: 1.5;
@@ -349,6 +348,10 @@ img {
 .four-section-image {
     position: relative;
     overflow: hidden;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+            0px 1px 1px rgba(46, 47, 66, 0.16),
+            0px 2px 1px rgba(46, 47, 66, 0.08);
+            transform: translateY(0%);
 }
 .list-four {
     display: flex;
