--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,10 @@ ul {
     padding: 0;
     margin: 0;
 }
+.header-container {
+    display: flex;
+    align-items: center;
+}
 .navi {
     display: flex;
     align-items: center;
@@ -99,6 +103,32 @@ ul {
         background: #f4f4fd;
         margin-bottom: 8px;
 }
+.second-part {
+    padding: 120px 0;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.two-list {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
+
+.features-dscr {
+    width: calc((100% - 72px) / 4);
+}
 .people-icons {
     display: flex;
     justify-content: center;
@@ -121,6 +151,11 @@ ul {
     letter-spacing: 0.02em;
     text-align: center;
 }
+.three-list {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
 .third-part .list-third {
     background-color: #ffffff;
     width: calc((100% - 72px) / 4);
@@ -128,6 +163,9 @@ ul {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
             0px 1px 1px rgba(46, 47, 66, 0.16),
             0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.employee {
+    padding: 32px 0;
 }
 .list .benef-s {
     font-size: 16px;
@@ -217,6 +255,37 @@ justify-content: center;
     color: #2e2f42;
     margin-bottom: 8px;
 }
+.four-part-of {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+.four-section-image {
+    position: relative;
+    overflow: hidden;
+}
+
+.list-four {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateY(0%);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.foto {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
 .under {
     background-color: #2e2f42;
     padding: 100px 0;
@@ -274,8 +343,10 @@ a {
     background-color: #ffffff;
     width: calc((100% - 48px)) / 3;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: relative;
+    overflow: hidden;
 }
-part-of-list:hover {
+part-of-list:hover .overlay {
      box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -304,62 +375,9 @@ part-of-list:hover {
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 1px 6px rgba(46, 47, 66, 0.08);
 }
-.header-container {
-    display: flex;
-    align-items: center;
-}
+
 img {
     display: block;
     max-width: 100%;
     height: auto;
-}
-.second-part {
-    padding: 120px 0;
-}
-.visually-hidden {
-            position: absolute;
-            width: 1px;
-            height: 1px;
-            margin: -1px;
-            border: 0;
-            padding: 0;
-            white-space: nowrap;
-            clip-path: inset(100%);
-            clip: rect(0 0 0 0);
-            overflow: hidden;
-}
-.two-list {
-    display: flex;
-    align-items: center;
-    gap: 24px;
-}
-.features-dscr{
-    width: calc((100% - 72px) / 4);
-}
-.three-list {
-    display: flex;
-    align-items: center;
-    gap: 24px;
-}
-.employee {
-    padding: 32px 0;
-}
-.four-part-of {
-    padding-top: 120px;
-    padding-bottom: 120px;
-}
-.four-section-image {
-    position: relative;
-    overflow: hidden;
-}
-.list-four {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 24px;
-    row-gap: 48px;
-}
-.foto {
-    padding: 32px 16px;
-    border: 1px solid #e7e9fc;
-    border-top: none;
 }
