--- a/css/styles.css
+++ b/css/styles.css
@@ -270,15 +270,31 @@ justify-content: center;
     column-gap: 24px;
     row-gap: 48px;
 }
-
+.part-of-list {
+    background-color: #ffffff;
+    width: calc((100% - 48px)) / 3;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.part-of-list:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+            0px 1px 1px rgba(46, 47, 66, 0.16),
+            0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.part-of-list:hover .overlay {
+    transform: translateY(0%);
+}
 .overlay {
     position: absolute;
     top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
     left: 0;
     width: 100%;
     height: 100%;
     transform: translateY(0%);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .foto {
@@ -339,19 +355,7 @@ a {
     color: #404BBF;
     background-color: #404BBF;
 }
-.part-of-list {
-    background-color: #ffffff;
-    width: calc((100% - 48px)) / 3;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    position: relative;
-    overflow: hidden;
-}
-part-of-list:hover .overlay {
-     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
-     transform: translateY(0%);
-}
+
 .list .dscr {
     line-height: 1.5;
     letter-spacing: 0.02em;
