--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ ul {
     display: block;
     padding: 24px 0;
 }
-.head-link {
+.navi .head-link {
     position: relative;
     color: #404bbf;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -197,6 +197,7 @@ background-color: #4d5ae5;
 border-radius: 50%;
 display: flex;align-items: center;
 justify-content: center;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .employee-icon {
     fill: #f4f4fd;
