--- a/css/styles.css
+++ b/css/styles.css
@@ -294,8 +294,10 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     left: 0;
     width: 100%;
     height: 100%;
-    transform: translateY(0%);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .foto {
@@ -307,6 +309,25 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #2e2f42;
     padding: 100px 0;
 
+}
+.footer-container {
+    display: flex;
+    align-items: baseline;
+}
+.footer-logo-und-p {
+    margin-right: 120px;
+}
+.footer-text {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #fff;
+        margin-bottom: 16px;
+}
+.footer-icons-list {
+    display: flex;
+    gap: 16px;
 }
 .foot-parag {
     font-size: 16px;
