--- a/css/styles.css
+++ b/css/styles.css
@@ -208,6 +208,13 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .icon-link:focus {
     background-color: #404bbf;
 }
+.footer-icons-list .icon-link:hover {
+    background-color: #31d0aa;
+}
+
+.footer-icons-list .icon-link:focus {
+    background-color: #31d0aa;
+}
 .logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
