--- a/css/styles.css
+++ b/css/styles.css
@@ -58,12 +58,13 @@ ul {
     background-color: #2e2f42;
     padding: 188px 0;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)), url(/images/office.jpg);
+        rgba(46, 47, 66, 0.7)), url(../images/office.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     max-width: 1440px;
     background-position: center;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin: 0 auto;
 }
 .first-part .inscription {
     font-weight: 700;
